Added Participant List for Private Events, New style for buttons added

--- a/src/app/image-popup/image-popup.component.scss
+++ b/src/app/image-popup/image-popup.component.scss
@@ -9,7 +9,7 @@
 }
 
 .close-button, .dialog-button{
-  background-color: $red-contrast;
+  background-color: $button-contrast;
 
   &:hover{
     background: $contrast;
