--- a/src/app/navigation-menu/navigation-menu.component.scss
+++ b/src/app/navigation-menu/navigation-menu.component.scss
@@ -40,7 +40,7 @@
 
   &:hover{
     color: $text_bright;
-    background: $red-contrast;
+    background: $button-contrast;
   }
 
   mat-icon{
@@ -58,7 +58,7 @@
 
   &:hover{
     color: $text_bright;
-    background-color: $red-contrast;
+    background-color: $button-contrast;
   }
 }
 
