--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -7,7 +7,9 @@ $contrast: #ffce51;
 $contrast-trans4: rgba(255, 166, 46, 0.4);
 $contrast-trans7: rgba(253, 187, 96, 0.7);
 $contrast-dark: #ff7e2e;
-$red-contrast: #F94339;
+$button-contrast: #241E4E;
+$button-hover: #9D5C63;
+$button-contrast-trans4: rgba(36, 30, 78, 0.4);
 $red-contrast-trans4: rgba(249, 67, 57, 0.4);
 $text_bright: #fafafa;
 $text_secondary: #b3b3b3;
