--- a/src/app/user-login/user-login.component.scss
+++ b/src/app/user-login/user-login.component.scss
@@ -51,17 +51,17 @@ a {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset]  {
-  background-color: $red-contrast;
+  background-color: $button-contrast;
   border: none;
-  color: $black;
+  color: $text_bright;
   padding: 15px 80px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   text-transform: uppercase;
   font-size: 13px;
-  -webkit-box-shadow: 0 10px 30px 0 $red-contrast-trans4;
-  box-shadow: 0 10px 30px 0 $red-contrast-trans4;
+  -webkit-box-shadow: 0 10px 30px 0 $button-contrast-trans4;
+  box-shadow: 0 10px 30px 0 $button-contrast-trans4;
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
   margin: 5px 20px 40px 20px;
@@ -75,6 +75,7 @@ input[type=button], input[type=submit], input[type=reset]  {
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
   background-color: $contrast;
   box-shadow: 0 10px 30px 0 $contrast-trans4;
+  color: $text-dark_primary;
 }
 
 input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
