--- a/src/styles/popup-card.scss
+++ b/src/styles/popup-card.scss
@@ -9,7 +9,7 @@
 }
 
 .close-button, .dialog-button{
-  background-color: $red-contrast;
+  background-color: $button-contrast;
 
   &:hover{
     background: $contrast;
