--- a/src/app/navigation-menu/navigation-menu.component.html
+++ b/src/app/navigation-menu/navigation-menu.component.html
@@ -4,7 +4,7 @@
       <img mat-dialog-title src="../../assets/img/logo-no-background.png" alt="RSVPlanner Logo" class="navbar-logo">
     </a>
     <div class="d-flex">
-      <button *ngIf="userService.isLoggedIn()"  class="logout-button" mat-raised-button aria-label="LogOut Button"  (click)="logOut()">
+      <button *ngIf="userService.isLoggedIn()" class="logout-button" mat-raised-button aria-label="logout-button"  (click)="logOut()">
         {{user}}<mat-icon>logout</mat-icon>
       </button>
       <button *ngIf="userService.isLoggedIn()" mat-fab class="notification-button" matTooltip="Notify Me" (click)="notificationEvent()" aria-label="Activate/Deactivate Notifications">
