--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -10,6 +10,7 @@ $contrast-dark: #ff7e2e;
 $button-contrast: #241E4E;
 $button-hover: #9D5C63;
 $button-contrast-trans4: rgba(36, 30, 78, 0.4);
+$red-contrast: rgb(249, 67, 57);
 $red-contrast-trans4: rgba(249, 67, 57, 0.4);
 $text_bright: #fafafa;
 $text_secondary: #b3b3b3;
